--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 :root {
     --white: #f5f5f5;
     --white2: #e4e4e4e3;
+    --white3: #ececec;
     --black: #252525;
     --black2: #0e0e0eb0;
     --grey: #7b7b7b;
@@ -60,7 +61,7 @@ body {
 }
 
 .close {
-    height: 270px;
+    height: 150px;
 }
 
 .select-product h2 {
@@ -127,7 +128,7 @@ body {
 }
 
 .product {
-    display: block;
+    display: none;
 }
 
 .product button {
@@ -177,6 +178,7 @@ body {
 /* cuando se elija "ver producto" */
 
 .display-product {
+    display: none;
     height: 780px;
     width: 80%;
     background: linear-gradient(var(--white), var(--white));
@@ -215,7 +217,7 @@ body {
     color: var(--black2);
     transition: all .5s ease;
     font-weight: bold;
-    border: .5px solid var(--beige);
+    border: 2px solid var(--beige);
 }
 
 .statistics30 div {
@@ -226,7 +228,7 @@ body {
     color: var(--black2);
     transition: all .5s ease;
     font-weight: bold;
-    border: .5px solid var(--beige);
+    border: 2px solid var(--beige);
     text-align: center;
     justify-content: center;
 }
@@ -278,4 +280,105 @@ body {
     background-color: var(--transparent);
     color: var(--beige);
     border: 3px solid var(--beige);
+}
+
+.modal-add-product {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+}
+
+.modal-add-product.show {
+    opacity: 1;
+    z-index: 1;
+}
+
+.content-modal {
+    position: relative;
+    background-color: var(--light-beige);
+    width: 80%;
+    max-width: 600px;
+    height: 270px;
+    margin: 130px auto;
+    padding: 20px;
+    border-radius: 30px;
+    transform: scale(0.9);
+    transition: transform 0.3s ease-in-out;
+    color: var(--white);
+    letter-spacing: 1px;
+
+}
+
+.modal-add-product.show .content-modal {
+    transform: scale(1);
+}
+
+.content-modal h4 {
+    font-size: 25px;
+    padding-bottom: 5px;
+}
+
+.content-modal form {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    row-gap: 5px;
+}
+.content-modal label{
+    display: block;
+    margin: 10px 0 10px 15px;
+    font-size: 17px;
+}
+
+.content-modal input {
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding: 0 5px;
+    font-size: 14px;
+    transition: all .2s ease;
+}
+
+.content-modal input[type=number]::-webkit-inner-spin-button {
+    display: none;
+}
+
+.content-modal input:focus {
+    outline: none;
+    border: 1px solid var(--beige);
+}
+
+.content-modal button {
+    grid-column: 1 / 3;
+    width: 37%;
+    height: 37px;
+    border-radius: 10px;
+    color: var(--light-beige);
+    font-size: 14px;
+    font-weight: bold;
+    border: none;
+    margin: 15px auto;
+    transition: all .3s ease;
+}
+
+.content-modal button:hover {
+    background-color: var(--beige);
+    color: var(--white);
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+#x {
+position: absolute;
+top: 0;
+right: 17px;
+width: 30px;
+height: 30px;
+border-radius: 20px;
+font-size: 19px;
 }
