--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html {
 
 body {
     height: 100%;
+    height: 110%;
     background-image: url(./gallery/bakcground.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
