--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ body {
     border: 3px solid var(--beige);
 }
 
-.modal-add-product {
+.modal {
     position: fixed;
     z-index: -1;
     top: 0;
@@ -295,12 +295,12 @@ body {
     transition: opacity .3s ease-in-out;
 }
 
-.modal-add-product.show {
+.modal.show {
     opacity: 1;
     z-index: 1;
 }
 
-.content-modal {
+.content-modal-add-product {
     position: relative;
     background-color: var(--light-beige);
     width: 80%;
@@ -316,27 +316,27 @@ body {
 
 }
 
-.modal-add-product.show .content-modal {
+.modal.show .content-modal-add-product {
     transform: scale(1);
 }
 
-.content-modal h4 {
+.content-modal-add-product h4 {
     font-size: 25px;
     padding-bottom: 5px;
 }
 
-.content-modal form {
+.content-modal-add-product form {
     display: grid;
     grid-template-columns: 50% 50%;
     row-gap: 5px;
 }
-.content-modal label{
+.content-modal-add-product label{
     display: block;
     margin: 10px 0 10px 15px;
     font-size: 17px;
 }
 
-.content-modal input {
+.content-modal-add-product input {
     height: 30px;
     border-radius: 5px;
     border: none;
@@ -345,16 +345,16 @@ body {
     transition: all .2s ease;
 }
 
-.content-modal input[type=number]::-webkit-inner-spin-button {
+.content-modal-add-product input[type=number]::-webkit-inner-spin-button {
     display: none;
 }
 
-.content-modal input:focus {
+.content-modal-add-product input:focus {
     outline: none;
     border: 1px solid var(--beige);
 }
 
-.content-modal button {
+.content-modal-add-product button {
     grid-column: 1 / 3;
     width: 37%;
     height: 37px;
@@ -367,7 +367,7 @@ body {
     transition: all .3s ease;
 }
 
-.content-modal button:hover {
+.content-modal-add-product button:hover {
     background-color: var(--beige);
     color: var(--white);
     transform: scale(1.05);
